<resources>
    <!-- Main Activity -->

    <string name="app_name">Memoris</string>
    <string name="new_game">New Game</string>
    <string name="settings">Settings</string>
    <string name="Credit">Credit</string>
    <string name="button_back">Back</string>
    <string name="button_ready">READY</string>
    <string name="button_erase">Erase Datas</string>
    <string name="button_leaderboard">Leaderboard</string>
    <string name="soundicon">SoundIcon</string>

    <!-- Credits -->
    <string name="credit_title">CREDITS</string>
    <string name="music">MUSIC</string>
    <string name="thanks">ACKNOWLEDGEMENTS</string>
    <string name="creators">CREATORS</string>




    <!-- Leaderboard -->
    <string name="leaderboard_title">LEADERBOARD</string>
    <string name="perfect_label">PERFECT</string>
    <string name="essai_label">Try</string>
    <string name="difficulty_label">Difficulty</string>
    <string name="nb_rep_label">Answers</string>

    <!-- New game -->
    <string name="button_easy">EASY</string>
    <string name="button_medium">MEDIUM</string>
    <string name="button_hard">HARD</string>
    <string name="button_competitive">NIGHTMARE </string>

    <!-- WORDS -->
    <string name="apple">Apple</string>
    <string name="balloon">Balloon</string>
    <string name="banana">Banana</string>
    <string name="bellpepper">Bell pepper</string>
    <string name="bicycle">Bicycle</string>
    <string name="bird">Bird</string>
    <string name="butterfly">Butterfly</string>
    <string name="cabbage">Cabbage</string>
    <string name="camera">Camera</string>
    <string name="car">Car</string>
    <string name="carrot">Carrot</string>
    <string name="cat">Cat</string>
    <string name="cherry">Cherry</string>
    <string name="coffee">Coffee</string>
    <string name="dice">Dice</string>
    <string name="dog">Dog</string>
    <string name="elephant">Elephant</string>
    <string name="hammer">Hammer</string>
    <string name="hat">Hat</string>
    <string name="icecream">Ice cream</string>
    <string name="juice">Juice</string>
    <string name="key">Key</string>
    <string name="laptop">Laptop</string>
    <string name="lemon">Lemon</string>
    <string name="orange">Orange</string>
    <string name="paintbrush">Paintbrush</string>
    <string name="panda">Panda</string>
    <string name="pencil">Pencil</string>
    <string name="popcorn">Popcorn</string>
    <string name="present">Present</string>
    <string name="screw">Screw</string>
    <string name="shark">Shark</string>
    <string name="sheep">Sheep</string>
    <string name="smartphone">Smartphone</string>
    <string name="strawberry">Strawberry</string>
    <string name="sun">Sun</string>
    <string name="tiger">Tiger</string>
    <string name="watermelon">Watermelon</string>
    <string name="whale">Whale</string>

    <!-- help -->
    <string name="help">Do not touche the : </string>

    <!-- Score -->
    <string name="resultat_titre">RESULTS</string>
    <string name="tryagain">Try Again</string>


</resources>