<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/timer">

    <Button
        android:id="@+id/button_easy"
        android:layout_width="279dp"
        android:layout_height="110dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/white_round_button"
        android:onClick="goto_timer_page"
        android:text="@string/button_easy"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_medium"
        android:layout_width="279dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_round_button"
        android:text="@string/button_medium"

        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_easy" />

    <Button
        android:id="@+id/button_hard"
        android:layout_width="279dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_round_button"
        android:text="@string/button_hard"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_medium" />


    <Button
        android:id="@+id/button_neightmare"
        android:layout_width="279dp"
        android:layout_height="110dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_round_button"
        android:text="@string/button_competitive"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_hard" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/transparent"
        android:onClick="goto_main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/back_arrow" />

</androidx.constraintlayout.widget.ConstraintLayout>